--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>STAR WARS GAME</title>
   <link rel="stylesheet" href="css/main.css">
-  <embed src="/sound/Star Wars Episode III - Battle over Coruscant Soundtrack.mp3" hidden="true" autostart="true" />
+  <embed src="/sound/Star Wars Episode III - Battle over Coruscant Soundtrack.mp3" hidden="false" autostart="true" />
 </head>
 
 <body>
